--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="184dp"
+        android:background="@drawable/rounded_button_new_game"
         android:onClick="startNewGame"
         android:text="New game"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_button_exit"
         android:onClick="exit"
         android:text="Exit"
         app:layout_constraintBottom_toBottomOf="parent"
