--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f48fb1</color>
-    <color name="colorPrimaryDark">#bf5f82</color>
+    <color name="colorPrimary">#cddc39</color>
+    <color name="colorPrimaryDark">#99aa00</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorButton">#ffff6e</color>
+    <color name="colorExitButton">#99aa00</color>
+    <color name="colorPopupBackround">#37474f</color>
 </resources>
